fix extra space beneath images inside of figures

--- a/static/css/story.css
+++ b/static/css/story.css
@@ -293,6 +293,10 @@ figure {
    padding: 0px;
 }
 
+figure img {
+   display: block;
+}
+
 body {
    counter-reset: figcaption;
 	counter-reset: tablecaption;
